daily_task left alignment issue fix

--- a/css/style.css
+++ b/css/style.css
@@ -501,11 +501,9 @@ img {
 .task_container_card {
   border: 3px solid #161716;
   border-radius: 10px;
-  /* padding: 10px; */
-  padding: 10px 3px;
+  padding: 10px;
   padding-bottom: 0px;
-  /* width: 40%; */
-  width: 45%;
+  width: 40%;
 }
 
 .task_name {
